--- a/resources/assets/backend/sass/core.scss
+++ b/resources/assets/backend/sass/core.scss
@@ -22,6 +22,27 @@ body {
   overflow-y: auto;
 }
 
+.btn-sm {
+  i.fa {
+    font-size: 0.9rem;
+  }
+}
+
+.info-icon {
+  position: relative;
+  width: 2rem;
+  height: 2rem;
+  padding:0 1rem;
+  .fa-circle{
+    color: #ad0000;
+    padding:0.2rem;
+    font-size:1.5rem;
+  }
+  .fa-info{
+    color:#fff;
+  }
+}
+
 /*
  * Content Wrapper - contains the main content
  */
