--- a/resources/assets/frontend/sass/snippets/blog/general.scss
+++ b/resources/assets/frontend/sass/snippets/blog/general.scss
@@ -3,6 +3,7 @@ $blog-featured-max-width: 46.9rem;
 
 .embed-container {
   position: relative;
+  margin:0 auto;
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
