--- a/resources/assets/frontend/sass/snippets/breadcrumbs.scss
+++ b/resources/assets/frontend/sass/snippets/breadcrumbs.scss
@@ -7,6 +7,7 @@
   .card {
     padding: .5rem;
     box-shadow: 0 .0625rem .25rem rgba(0, 0, 0, .075);
+    position: relative;
   }
 
   ul.breadcrumbs {
