--- a/resources/assets/frontend/sass/pages/blog/general.scss
+++ b/resources/assets/frontend/sass/pages/blog/general.scss
@@ -90,7 +90,7 @@ h5.bordered {
           background: #515BD4;
         }
 
-        &.fa-vimeo-square {
+        &.fa-vimeo {
           background: #7FC400;
         }
 
