--- a/resources/assets/frontend/sass/blocks/header.scss
+++ b/resources/assets/frontend/sass/blocks/header.scss
@@ -294,6 +294,7 @@
   animation-duration: .5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  position: fixed;
 }
 
 .nav-link.nav-logo {
