--- a/resources/assets/backend/sass/_variables.scss
+++ b/resources/assets/backend/sass/_variables.scss
@@ -58,7 +58,7 @@ $screen-sm-max: ($screen-md-min - 1);
 // COLORS
 // --------------------------------------------------------
 // Primary
-$light-blue: #3c8dbc;
+$light-blue: #3478a1;
 // Danger
 $red: #dd4b39;
 // Success
@@ -79,6 +79,7 @@ $purple: #605ca8;
 $maroon: #D81B60;
 $black: #111;
 $gray-lte: #d2d6de;
+$primary : #3d4d53;
 
 // LAYOUT
 // --------------------------------------------------------
@@ -92,7 +93,7 @@ $screen-header-collapse: $screen-xs-max;
 
 // Link colors (Aka: <a> tags)
 $link-color: $light-blue;
-$link-hover-color: lighten($link-color, 15%);
+$link-hover-color: darken($link-color, 15%);
 
 // Body background (Affects main content background only)
 //$body-bg: #1f4; // DEPRECATED
