--- a/resources/assets/backend/sass/header.scss
+++ b/resources/assets/backend/sass/header.scss
@@ -70,10 +70,11 @@
       text-align: center;
       user-select: none;
       font-size: 0.9rem;
-      padding: 0.375rem 0.75rem;
+      padding: 0.5rem 0;
 
       a {
         color: #fff;
+        padding:0.5rem 0.75rem;
       }
 
       &:hover {
@@ -146,7 +147,7 @@
     color: #fff;
   }
 
-  #logo_wrapper {
+  #logo-wrapper {
     position: relative;
     margin: 0;
     padding: 0;
@@ -155,6 +156,10 @@
     height: $navbar-height;
     left: 0;
     float: left;
+    background-color: #343a40;
+    img{
+      width:65%;
+    }
   }
 }
 
