--- a/resources/assets/backend/sass/sidebar-drawer/sidebar-mini.scss
+++ b/resources/assets/backend/sass/sidebar-drawer/sidebar-mini.scss
@@ -71,6 +71,9 @@
             margin-left: -15px;
             margin-right: -15px;
             font-size: 18px;
+            img{
+              padding:0.2rem;
+            }
           }
           > .logo-lg {
             display: none;
