--- a/resources/assets/frontend/sass/pages/blog/comments.scss
+++ b/resources/assets/frontend/sass/pages/blog/comments.scss
@@ -1,10 +1,124 @@
-#comments-container {
-  margin: 2rem auto;
+#comments-wrapper {
+  #comments-header {
+    margin: 0;
+    position: relative;
+
+    .btn {
+      position: absolute;
+      top: 0.5rem;
+      right: 3rem;
+    }
+  }
+}
+
+.comment-editor-container {
+  margin: 0 auto;
   border: none;
 
   .btn {
     font-size: 0.85rem;
     padding: 0.2rem 0.4rem;
-    line-height:1.4rem;
+    line-height: 1.4rem;
+  }
+}
+
+#comments-container {
+  .comment-item {
+    margin: 0.25rem 0;
+    border: none;
+    padding: 0.5rem;
+  }
+
+  .comment-header {
+    position: relative;
+    display: block;
+    margin-bottom: 0.3rem;
+
+    .comment-header-item {
+      font-family: $font-family-title;
+      display: inline-flex;
+      vertical-align: middle;
+      padding: 0.2rem;
+
+      .username {
+        font-size: 1.1rem;
+      }
+
+      .date {
+        font-size: 0.8rem;
+        font-style: italic;
+      }
+
+      &.favorite {
+        float: right;
+        text-align: center;
+
+        i.fa-star-o {
+          font-size: 1.5rem;
+          line-height: 1.5rem;
+          padding: 0.3rem;
+          color: $primary;
+
+          &:hover {
+            cursor: pointer;
+            color: $primary;
+
+            &:before {
+              content: "\F005";
+            }
+          }
+        }
+
+        .fav-count {
+          color: #8c8c8c;
+          font-size: 0.8rem;
+          margin-top: -0.5rem;
+          padding: 0;
+
+          &:hover {
+            cursor: default;
+          }
+        }
+      }
+
+    }
+
+    figure {
+      padding: 0.2rem;
+
+      img {
+        width: 3rem;
+        height: 3rem;
+        border-radius: 40%;
+      }
+    }
+  }
+
+  .comment-body {
+    p {
+      margin: 0;
+
+      &:hover {
+        cursor: default;
+      }
+    }
+  }
+
+  .comment-footer {
+    margin: 0.5rem 0 0;
+    min-height:2rem;
+
+    button {
+      &.pull-left {
+        font-size: 0.8rem;
+        padding:0.2rem 0.5rem;
+      }
+
+      &.pull-right {
+        font-size: 0.875rem;
+        padding: 0.25rem 0.5rem;
+
+      }
+    }
   }
 }
