--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -70,6 +70,7 @@ $fa-font-path2: "../../_fonts/vendor" !default;
 //**********************************************
 @import "./core";
 @import "./elements/form";
+@import "./elements/buttons";
 @import "./blocks/header";
 @import "./blocks/footer";
 
