--- a/resources/assets/frontend/sass/elements/form.scss
+++ b/resources/assets/frontend/sass/elements/form.scss
@@ -150,6 +150,10 @@ label.field-required {
     padding: 3px;
     cursor: default;
     user-select:none;
+
+    i{
+      padding-top:1px;
+    }
   }
 
   .password-badge-error {
