--- a/resources/assets/frontend/sass/pages/blog/comments.scss
+++ b/resources/assets/frontend/sass/pages/blog/comments.scss
@@ -150,8 +150,8 @@
       margin: 0.5rem 0;
       padding: 0.5rem;
       border-radius: 5px;
-      background: $color-black;
-      color: $color-white;
+      background: #000;
+      color: #fff;
       font-size: 0.8rem;
       overflow-x: auto;
 
@@ -167,8 +167,8 @@
         border-radius: 5px;
         font-size: 0.8rem;
         font-weight: bold;
-        background: rgba($color-black, 0.1);
-        color: rgba($color-black, 0.8);
+        background: rgba(#000, 0.1);
+        color: rgba(#000, 0.8);
       }
 
       &:hover {
