--- a/resources/assets/backend/sass/elements/images.scss
+++ b/resources/assets/backend/sass/elements/images.scss
@@ -27,8 +27,8 @@
     }
 
     .thumbnail-selectable {
-      width: 144px;
-      height: 144px;
+      width: 150px;
+      height: 150px;
       border-radius: 3px;
       border: 1px solid #000;
       z-index: 0;
@@ -38,23 +38,24 @@
           cursor: default;
         }
       }
+        transition: background-color ease-in-out 0.3s;
       &:hover {
         background-color: #0cb400;
-        transition: background-color ease-in-out 0.2s;
         cursor: pointer;
       }
       & > .thumbnail-inner {
         position: relative;
-        top: 7px;
-        left: 5px;
-        width: 132px;
-        height: 132px;
+        top: 10px;
+        left: 0;
+        width: 150px;
+        height: 150px;
         z-index: 1;
-        & > img {
+        img {
           position: relative;
           z-index: 2;
           width: 128px;
           height: 128px;
+          border: 2px solid #e5ffe0;
         }
       }
     }
