--- a/resources/emails/mjml/register.mjml
+++ b/resources/emails/mjml/register.mjml
@@ -27,7 +27,7 @@
             </mj-column>
         </mj-section>
         <mj-section background-color="#efd6ce" padding-left="0px" padding-right="0px" padding-bottom="50px"
-                    padding-top="50px" border-radius="0px 0px 16px 16px" align="center">
+                    padding-top="50px" align="center">
             <mj-column vertical-align="top" width="100%" align="center">
                 <mj-text font-size="15px" padding-top="15px">{!! trans('email.welcome.body1') !!}
                 </mj-text>
@@ -40,7 +40,7 @@
 
 
         <mj-section background-color="#ce834a" padding-left="0px" padding-right="0px" padding-bottom="22px"
-                    padding-top="25px" align="center" border-top="8px solid #a75c23">
+                    padding-top="25px" align="center" border-radius="0px 0px 16px 16px" border-top="8px solid #a75c23">
             <mj-column vertical-align="top" width="100%" align="center">
                 <mj-button font-weight="bold" background-color="#024944" color="white" href="{!! route_i18n('activate',$activation_token) !!}" font-size="18px"
                            line-height="23px" padding="20px 30px">{!! trans('email.welcome.cta') !!}
