--- a/resources/assets/frontend/sass/pages/blog/comments.scss
+++ b/resources/assets/frontend/sass/pages/blog/comments.scss
@@ -108,9 +108,26 @@
         font-style: italic;
       }
 
-      &.favorite {
+      &.actions {
         float: right;
         text-align: center;
+
+        .favorite{
+          display:block;
+          margin-right:1rem;
+        }
+
+        .expand{
+          line-height:1.5rem;
+
+          &:hover{
+            cursor:pointer;
+          }
+
+          i{
+            padding:0.8rem;
+          }
+        }
 
         i.fa-star, i.fa-star-o {
           font-size: 1.5rem;
