--- a/resources/assets/backend/sass/elements/tables.scss
+++ b/resources/assets/backend/sass/elements/tables.scss
@@ -2,6 +2,19 @@
   .table {
     margin-bottom: 0;
 
+    .column-header{
+
+      &:hover{
+        cursor:pointer;
+      }
+    }
+
+    .sort-header {
+      i {
+        margin-left:1rem;
+      }
+    }
+
     td {
       border: none;
     }
