--- a/resources/assets/backend/sass/components/tree.scss
+++ b/resources/assets/backend/sass/components/tree.scss
@@ -1,34 +1,47 @@
 $list_border_dotted: 1px solid #000;
+$tree-guides-radius: 5px;
+$border: 2px solid rgba(93, 116, 133, 0.2);
 
 .tree-container {
   position: relative;
   z-index: 0;
   display: block;
   margin: 1rem 0 0 .25rem;
+
+  & > ul:first-child {
+    li:before {
+      display: none;
+    }
+  }
 }
 
-.tree-list-container {
-  .tree-list {
-    & > .row {
-      display: block;
-    }
+.tree-list {
+  & > .row {
+    display: block;
+  }
 
-    ul {
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-      position: relative;
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    position: relative;
+
+    &.last {
+      & > li:after {
+        display: none;
+      }
     }
 
     .li-indicator {
+      position: relative;
+      z-index: 5;
       color: white;
       cursor: pointer;
       background: #334153;
-      position: relative;
       border-radius: 2px;
       box-shadow: 0 1px 6px 0 rgba(117, 117, 117, .15);
       padding: 1px;
-      top: 0;
+      top: 0.1rem;
       border: 1px solid #334153;
     }
 
@@ -56,10 +69,41 @@ $list_border_dotted: 1px solid #000;
     }
 
     li {
+      position: relative;
+      z-index: 1;
       list-style-type: none;
-      margin-left: 2em;
-      padding: .75em 1em;
+      margin: 0.5rem 0 0.5rem 2rem;
+      padding: 0 1rem;
       user-select: none;
+
+      $position-left: 1.75rem;
+      $position-top: 1.2rem;
+
+      &:before {
+        content: "";
+        position: absolute;
+        top: -1.05rem;
+        left: $position-left;
+        border-left: $border;
+        border-bottom: $border;
+        border-radius: 0 0 0 $tree-guides-radius;
+        width: 2rem;
+        height: 2.5rem;
+        z-index: 0;
+      }
+
+      &:after {
+        position: absolute;
+        content: "";
+        top: 1.45rem;
+        left: $position-left;
+        border-left: $border;
+        border-top: $border;
+        border-radius: $tree-guides-radius 0 0 0;
+        width: 2rem;
+        height: calc(100% - 2rem);
+        z-index: 0;
+      }
 
       .li-wrapper {
         padding-left: .5em;
@@ -71,16 +115,18 @@ $list_border_dotted: 1px solid #000;
         }
 
         .li-btn-group-wrapper {
-          padding: 5px;
+          position: relative;
+          padding: 0.5rem 1rem;
           display: inline-block;
           border-radius: 10px;
           background-color: darken($primary, 5%);
           color: white;
           box-shadow: 1px 1px 10px 0 #939aa8;
           transition: background-color 0.8s;
+          z-index: 5;
 
           &:hover {
-            background-color: lighten($primary,5%);
+            background-color: lighten($primary, 5%);
             transition: background-color 0.8s;
           }
 
@@ -162,12 +208,11 @@ $list_border_dotted: 1px solid #000;
       margin-right: -1px;
       z-index: 25;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      li:hover{
+
+      li:hover {
         background: #dcdcdc;
-        cursor:pointer;
+        cursor: pointer;
       }
     }
   }
-
-
 }
