--- a/resources/assets/backend/sass/bootstrap.scss
+++ b/resources/assets/backend/sass/bootstrap.scss
@@ -3,9 +3,15 @@
     box-shadow: 0 1px 6px 0 rgba(117, 117, 117, .15)
   }
 
+  .card-header > ul {
+    &:focus {
+      outline: none;
+    }
+  }
+
   .alert {
-    button:focus{
-      outline:none;
+    button:focus {
+      outline: none;
     }
   }
 }
