--- a/resources/assets/frontend/sass/app.scss
+++ b/resources/assets/frontend/sass/app.scss
@@ -88,6 +88,7 @@ $fa-font-path2: "../../_fonts/vendor" !default;
 @import "pages/blog/featured";
 @import "pages/blog/spotlight";
 @import "pages/blog/comments";
+@import "pages/login";
 @import "pages/search";
 @import "snippets/code";
 @import "./snippets/breadcrumbs";
