--- a/resources/assets/backend/sass/_variables.scss
+++ b/resources/assets/backend/sass/_variables.scss
@@ -1,4 +1,5 @@
 // Typography
+$be-font-buttons: "Signika", sans-serif;
 $font-family-sans-serif: "Roboto", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
