--- a/resources/assets/backend/sass/elements/tables.scss
+++ b/resources/assets/backend/sass/elements/tables.scss
@@ -2,16 +2,19 @@
   .table {
     margin-bottom: 0;
 
-    .column-header{
-
-      &:hover{
-        cursor:pointer;
-      }
+    .column-header {
+      font-family: $be-font-buttons;
+      letter-spacing: 0.05rem;
+      background: linear-gradient(top, #e8ebeb 0%, #fcffff 50%, #e8ebeb 100%);
     }
 
     .sort-header {
+      &:hover {
+        cursor: pointer;
+      }
+
       i {
-        margin-left:1rem;
+        margin-left: 1rem;
       }
     }
 
