--- a/resources/assets/backend/sass/fonts.scss
+++ b/resources/assets/backend/sass/fonts.scss
@@ -33,3 +33,16 @@
   url('../../_fonts/roboto-v18-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
   url('../../_fonts/roboto-v18-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
 }
+/* roboto-condensed-regular - latin */
+@font-face {
+  font-family: 'Signika';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../_fonts/signika-v9-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Signika'), local('Signika-Regular'),
+  url('../../_fonts/signika-v9-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../_fonts/signika-v9-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../_fonts/signika-v9-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../_fonts/signika-v9-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../_fonts/signika-v9-latin-regular.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
+}
