--- a/resources/assets/backend/sass/elements/tables.scss
+++ b/resources/assets/backend/sass/elements/tables.scss
@@ -5,7 +5,7 @@
     .column-header {
       font-family: $be-font-buttons;
       letter-spacing: 0.05rem;
-      background: linear-gradient(top, #e8ebeb 0%, #fcffff 50%, #e8ebeb 100%);
+      background: linear-gradient(to top, #e8ebeb 0%, #fcffff 50%, #e8ebeb 100%);
     }
 
     .sort-header {
